another alignment fix.

--- a/dev/scss/_main.scss
+++ b/dev/scss/_main.scss
@@ -401,6 +401,10 @@ body.page-template-page-about {
   }
 }
 
+img.contact-logo {
+  margin-top: 8px;
+}
+
 .client-galleries .post-title {
   margin-top: 10px;
 }
